# bazel-build-server

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  bsp-wrapper.sh  output.txt
.github/workflows/: swift.yml
Sources/ActionQuery/: ActionQuery.swift  BazelTarget.swift  QueryResult.swift
Sources/BSPError/: BSPError.swift
Sources/BazelActionQuery/: ActionQuery.swift  BazelTarget.swift  ShellCommand.swift
Sources/BazelBuildServer/: BazelBuildServer.swift  main.swift
Sources/BazelBuildServerLib/: BSPTypes.swift  BuildServer.swift
Sources/BazelSourceKitBSP/: main.swift
Sources/BazelSourceKitBSPLib/: BSPTypes.swift  BazelQuery.swift  BuildServer.swift  RequestHandler.swift  StreamLogHandler.swift
Sources/QueryParser/: QueryParser.swift
Sources/ShellCommand/: ShellCommand.swift
TestHarness/: .bazelrc  MODULE.bazel  buildServer.json
TestHarness/App/: BUILD.bazel
TestHarness/App/Sources/: ContentView.swift
TestHarness/Features/BazelView/: BUILD.bazel
TestHarness/Libraries/NetworkStack/: BUILD.bazel
TestHarness/Libraries/ObjcFunc/: BUILD.bazel  ObjcFunc.h
Tests/ActionQueryTests/: ActionQueryTests.swift
Tests/ActionQueryTests/Resources/: aquery.json  aquery.txt
Tests/QueryParserTests/: QueryParserTests.swift
Tests/ShellCommandTests/: ShellCommandTests.swift
example/: .bazelrc  MODULE.bazel  bazel-out  buildServer.json  full.json
example-app/: .bazelrc  MODULE.bazel  README.md  bazel-example-app  bazel-example-ios  buildServer.json
example-app/App/: BUILD.bazel
example-app/App/Sources/: ContentView.swift  ExampleApp+String.swift  ExampleApp.swift
example-app/Features/BazelView/: BUILD.bazel  BazelView.swift
example-app/Libraries/Analytics/: BUILD.bazel
example-app/Libraries/NetworkStack/: NetworkStack.swift
example-app/Libraries/ObjcFunc/: ObjcFunc.m  ObjcFunc.modulemap  ObjcFuncSwift.swift
example/Sources/Components/: BUILD.bazel  Button.swift
example/Sources/Utils/: BUILD.bazel  Utils.swift
legacy-rust/: CLAUDE.md  output.txt
legacy-rust/example-app/: .bazelrc
legacy-rust/example-app/Features/BazelView/: BazelView.swift
legacy-rust/example-app/Libraries/Analytics/: Analytics.swift
legacy-rust/example-app/Libraries/Utils/: BUILD.bazel  Utils.swift
legacy-rust/src/: main.rs
legacy-rust/src/aquery/: mod.rs  query_result.rs
legacy-rust/src/json_rpc/: mod.rs
legacy-rust/src/messages/: initialize_build_request.rs
legacy-rust/src/support_types/: build_server_config.rs  build_target.rs  methods.rs  mod.rs
src/: aquery.rs  build_server_config.rs  error.rs  json_rpc.rs  logger.rs  main.rs  messages.rs
src/aquery/: mod.rs  query_result.rs
src/json_rpc/: mod.rs
src/messages/: build_target.rs  build_target_sources_request.rs  initialize_build_request.rs  mod.rs  register_for_changes.rs  text_document_source_kit_options_request.rs
src/support_types/: build_server_config.rs  build_target.rs  methods.rs  mod.rs
src/utils/: logger.rs
tests/: tests.rs
