[package]
name = "buildserver"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5.4", features = ["serde"] }
