module(name = "example-app")

external_git_repo = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")
external_dependency = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "rules_swift",
    version = "2.8.1",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_apple",
    version = "3.22.0",
    repo_name = "build_bazel_rules_apple"
)

bazel_dep(
    name = "apple_support",
    version = "1.17.1",
    repo_name = "build_bazel_apple_support"
)

external_git_repo(
    name = "JOSESwift",
    build_file = "//third_party:BUILD.JOSESwift.bazel",
    commit = "c2664a902e75c0426a1d43132bd4babc6fd173d3",
    remote = "https://github.com/airsidemobile/JOSESwift.git"
)

external_dependency(
    name = "SwiftNonEmpty",
    build_file = "//third_party:BUILD.SwiftNonEmpty.bazel",
    sha256 = "af5fe573b1a6f511b464b18c78be1a5728d8f3b2f0dae660ccc7cc3543635d19",
    strip_prefix = "swift-nonempty-0.5.0",
    url = "https://github.com/pointfreeco/swift-nonempty/archive/refs/tags/0.5.0.zip"
)