load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Sources",
    srcs = [
        "Sources/ContentView.swift",
        "Sources/ExampleApp.swift",
        "Sources/ExampleApp+String.swift",
    ],
    module_name = "Sources",
    tags = ["manual"],
    deps = [
        "//Features/BazelView:BazelView",
        "//Libraries/NetworkStack:NetworkStack",
        "//Libraries/Analytics:Analytics",
        "//Libraries/Utils:Utils",
        "@SwiftNonEmpty",
        "@JOSESwift",
    ]
)

ios_application(
    name = "App",
    bundle_id = "com.example-app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = [":Info.plist"],
    minimum_os_version = "15.0",
    deps = [":Sources"],
    visibility = ["//visibility:public"],
)

