load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

objc_library(
    name = "ObjcFunc",
    srcs = ["ObjcFunc.m"],
    hdrs = ["ObjcFunc.h"],
    module_map = "ObjcFunc.modulemap",
    visibility = ["//visibility:public"],
    sdk_frameworks = ["Foundation"],
)

swift_library(
    name = "ObjcFuncSwift",
    srcs = ["ObjcFuncSwift.swift"],
    module_name = "ObjcFuncSwift",
    visibility = ["//visibility:public"],
    deps = [":ObjcFunc"],
)