load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "BazelView",
    srcs = ["BazelView.swift"],
    module_name = "BazelView",
    visibility = ["//visibility:public"],
    deps = [
        "//Libraries/Analytics:Analytics",
        "//Libraries/NetworkStack:NetworkStack",
        "//Libraries/Utils:Utils",
    ]
)

