load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "BazelView",
    srcs = ["BazelView.swift"],
    deps = [
        "//Libraries/Analytics:Analytics",
        "//Libraries/NetworkStack:NetworkStack",
        "//Libraries/Utils:Utils",
        "@HexColors//:HexColors",
    ],
    visibility = ["//visibility:public"],
)

