load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "Utils",
    srcs = ["AwesomeUtils.swift"],
    module_name = "Utils",
    visibility = ["//visibility:public"],
    copts = [
        "-index-store-path",
        "/Users/sean7218/bazel/hello-bazel/.indexstore",
    ],
)

